# Film_tg_bot

./: .gitignore  Makefile  README.md  pyproject.toml
Bot/: __init__.py  __main__.py  models.py
Bot/config/: defaults.py
Botapp/: __init__.py  __main__.py  models.py
Botapp/config/: defaults.py
Botapp/handlers/: main.py
