[tool.poetry]
name = "film-tg-bot"
version = "0.1.0"
description = "Telegramm_Bot_Film"
authors = ["Boborenko <fatonn.nb@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pyrogram = "^2.0.106"
modconfig = "^1.2.1"
peewee-aio = "^1.7.3"
tgcrypto = "^1.2.5"
aiosqlite = "^0.19.0"
peewee = "^3.17.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
